# x4

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml  flake.nix  justfile  readme.md
.github/: dependabot.yml  guide.md
.github/workflows/: ci.yml  nix-build.yml  release.yml
examples/: many_servers.json  single_with_cmdpass.json  single_with_pass.json  single_with_pvtkey.json  sshy.json  sxm.json  test_schema.json
src/: args.rs  exec.rs  lib.rs  main.rs  parser.rs
src/corex/: args.rs  inspect.rs  mod.rs  parser.rs  ssh.rs
src/engine/: args.rs  configuration.rs  inspect.rs  interaction.rs  mod.rs  ssh.rs
tests/: arguments.rs  pipeline_schema.rs
