[package]
name = "sshy"
version = "0.1.0"
authors = ["pwnwriter <hey@pwnwriter.xyz>"]
edition = "2021"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pwnwriter/sshy"
repository = "https://github.com/pwnwriter/sshy"
keywords = ["ssh", "ssh-command", "cli"]
categories = ["command-line-utilities"]
include = [
        "src/**/*",
        "Cargo.*",
        "LICENSE*",
        "README.md",
        "CHANGELOG.md",
]

[dependencies]

[profile.dev]
opt-level = 0
debug = true
panic = "abort"

[profile.test]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
panic = "unwind"
lto = true
codegen-units = 1
strip = true

[profile.bench]
opt-level = 3
debug = false
