[package]
name = "sxm"
version = "0.1.0"
authors = ["pwnwriter <hey@pwnwriter.xyz>"]
description = ""
edition = "2021"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pwnwriter/sxm"
repository = "https://github.com/pwnwriter/sxm"
keywords = ["ssh", "ssh-command", "cli"]
categories = ["command-line-utilities"]
include = [
        "src/**/*",
        "Cargo.*",
        "LICENSE*",
        "README.md",
        "CHANGELOG.md",
]

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
colored = "2.1.0"
miette = { version = "7.2.0", features = ["fancy"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
ssh2 = { version = "0.9.4", features = ["vendored-openssl"] }

[profile.dev]
opt-level = 0
debug = true
panic = "abort"

[profile.test]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
panic = "unwind"
lto = true
codegen-units = 1
strip = true

[profile.bench]
opt-level = 3
debug = false
