[package]
name = "x4"
version = "0.1.0"
authors = ["pwnwriter <hey@pwnwriter.xyz>"]
description = "Execute shell commands to a server via ssh protocol"
edition = "2021"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pwnwriter/x4"
repository = "https://github.com/pwnwriter/x4"
keywords = ["ssh", "ssh-command", "cli"]
categories = ["command-line-utilities"]
include = [
        "src/**/*",
        "Cargo.*",
        "LICENSE*",
        "readme.md",
        "CHANGELOG.md",
]

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
colored = "2.1.0"
miette = { version = "7.2.0", features = ["fancy"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
ssh2 = { version = "0.9.4", features = ["vendored-openssl"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[profile.dev]
opt-level = 0
debug = true
panic = "abort"

[profile.test]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
panic = "unwind"
lto = true
codegen-units = 1
strip = true

[profile.bench]
opt-level = 3
debug = false
